syntax = "proto3";

option go_package = "google.golang.org/grpc/examples/helloworld/helloworld";

package health_info;

service HealthInfoService {
    rpc CheckHealth (HealthCheckRequest) returns (HealthCheckResponse) {}
    rpc GetServiceInfo (ServiceInfoRequest) returns (ServiceInfoResponse) {}
}

message HealthCheckRequest {}
message HealthCheckResponse {
    bool status = 1;
    string message = 2;
}

message ServiceInfoRequest {}
message ServiceInfoResponse {
    string service_name = 1;
    string version = 2;
}